20140123 rzx.c: reset the autosave frame count on rollback to fix the prune
         function. Fix some warnings about unused parameters (Sergio).
20140123 peripherals/disk/disk.c: fix loading of EDSK files with Sector Offset
         block (fixes bug #307) (Sergio).
20140210 data/fuse.desktop.in: Remove GNOME category as Fuse is not based on
         GNOME libraries (Sergio).
20140217 ui/widget/{filesel.c,roms.c},ui/win32/win32ui.c: fix possible leaks and
         null pointer dereferences (thanks, cppcheck) (Sergio).
20140303 memory.c: Timex EXROM and Dock text was truncated in the debugger UI
         (thanks, Andrew Owen) (Fred).
20140322 memory.c,ui/widget/debugger.c: allow room in the widget UI debugger for
         longer memory straings, restore Timex EXROM and Dock text as it isn't
         truncated in any UIs now (thanks, Sergio) (Fred).
20140322 sound/blipbuffer.h: remove second inline declaration of
         blip_buffer_set_clock_rate() (Fred).
20140510 tape.c: fix speech in Cobra's Arc - Medium Case.tzx when loaded with
         tape traps enabled (thanks, zx81 and Sergio) (Fred).
20140706 hacking/peripheral_tests.txt: use unzipped tapes for peripheral tests
         (thanks, Phil Reynolds) (Sergio).
20140804 ui/gtk/{gtkcompat.h,gtkui.c}: replace deprecated gtk_widget_modify_font
         and remove obsolete gtk_window_set_wmclass (Sergio).
20140907 autogen.sh: select glibtoolize where required (Sergio).
20140920 ui/gtk/pokefinder.c: fix empty list on GTK+ 3 (Sergio).
20140920 data: add fuse.desktop and fuse.xml to the ignore property (Sergio).
20141109 configure.ac: prefer GTK+ 3 to GTK+ 2 (Sergio).
20141228 Makefile.am,configure.ac,input.h,keysyms.{dat,pl},settings.dat,
         sound/Makefile.am,timer/Makefile.am,ui/options.dat,ui/sdl/{Makefile.am,
         sdl2display.c,sdl2keyboard.h,sdldisplay.h,sdljoystick.c,
         sdlkeyboard.[c|h],sdlui.c},ui/widget/widget.c: Initial SDL2 UI code
         (patch #326) (Gergely Szasz).